--- a/res/layout/activity_checklist.xml
+++ b/res/layout/activity_checklist.xml
@@ -1,24 +1,72 @@
-RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tvNovaObra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world"
-        tools:context=".ChecklistActivity" />
-
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="34dp"
-        android:layout_toLeftOf="@+id/textView1"
-        android:text="CheckBox" />
+        android:layout_marginLeft="26dp"
+        android:layout_marginTop="23dp"
+        android:text="Nova Obra"/>
+
+    <EditText
+        android:id="@+id/etNovaObra"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tvNovaObra"
+        android:layout_below="@+id/tvNovaObra"
+        android:ems="10"/>
+
+    <TextView
+        android:id="@+id/tvQtdeBalanca"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/etNovaObra"
+        android:layout_below="@+id/etNovaObra"
+        android:layout_marginTop="20dp"
+        android:text="Quantidade de Balanças" />
+
+    <EditText
+        android:id="@+id/etQtdeBalanca"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tvQtdeBalanca"
+        android:layout_below="@+id/tvQtdeBalanca"
+        android:ems="10"
+        android:inputType="number" />
+
+    <TextView
+        android:id="@+id/tvDataInicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/etQtdeBalanca"
+        android:layout_below="@+id/etQtdeBalanca"
+        android:layout_marginTop="14dp"
+        android:text="Data de Início" />
+
+    <EditText
+        android:id="@+id/etDataInicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/tvDataInicio"
+        android:layout_below="@+id/tvDataInicio"
+        android:ems="10"
+        android:inputType="date" >
+
+        <requestFocus />
+    </EditText>
+
+    <Button
+        android:id="@+id/btCriarObra"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/tvQtdeBalanca"
+        android:layout_below="@+id/etDataInicio"
+        android:layout_marginTop="25dp"
+        android:text="Criar" />
 
 </RelativeLayout>
